--- a/playbooks/inventory/hosts.ini
+++ b/playbooks/inventory/hosts.ini
@@ -1,5 +1,5 @@
 [mgm]
-control ansible_user=ubuntu
+control ansible_user = ubuntu
 
 [devs]
 node1
@@ -8,8 +8,8 @@ node1
 node2
 
 [sbx]
-node3 ansible_host = node1
-node4 ansible_host = node2
+# node3 ansible_host = node1
+# node4 ansible_host = node2
 
 [dc:children]
 prd
