--- a/playbooks/inventory/hosts.ini
+++ b/playbooks/inventory/hosts.ini
@@ -1,5 +1,6 @@
 [mgm]
-control ansible_user = ubuntu
+
+control     ansible_user = ubuntu
 
 [devs]
 node1
@@ -7,7 +8,7 @@ node1
 [prd]
 node2
 
-[sbx]
+# [sbx]
 # node3 ansible_host = node1
 # node4 ansible_host = node2
 
