--- a/playbooks/control.yml
+++ b/playbooks/control.yml
@@ -6,7 +6,7 @@
   - name: Put ssh privat key
     ansible.builtin.copy:
       src: $HOME/.ssh/id_ed25519
-      dest: $HOME/.ssh/id_ed25519
+      dest: /home/ubuntu/.ssh/id_ed25519
       force: true
       owner: ubuntu
       group: ubuntu
