--- a/playbooks/inventory/hosts.ini
+++ b/playbooks/inventory/hosts.ini
@@ -1,12 +1,11 @@
 [mgm]
-
-control     ansible_user=ubuntu
+control ansible_host=localost ansible_user=ubuntu
 
 [dev]
-node1
+node1 ansible_host=192.168.1.141 ansible_user=ubuntu
 
 [prd]
-node2
+node2 ansible_host=192.168.1.161 ansible_user=ubuntu
 
 # [sbx]
 # node3 ansible_host = node1
